# openai

./: .gitignore  README.md  requirements.txt
chat/: chat.py  main.py
chat/utils/: formatter.py  save_data.py
chat_lang_chain_zenn/: README.md  pyproject.toml
chat_lang_chain_zenn/src/chat_lang_chain_zenn/: __init__.py
chat_lang_chain_zenn/src/chat_lang_chain_zenn/chat/: main.py
vector_dbs/: README.md  qdrant_db.py
web_app/chat_with_PDF/: app.py
web_app/chat_with_PDF/tests/: test_app.py
