[project]
name = "chat-lang-chain-zenn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "enginearn", email = "enginyaaaaan@gmail.com" }
]
dependencies = [
    "openai>=0.27.8",
    "langchain>=0.0.27",
    "tiktoken>=0.4.0",
    "streamlit>=1.25.0",
    "mypy>=1.4.1",
    "pylint>=2.17.5",
    "black>=23.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
